Remove role attribute from navbar element

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
     <header>
-    <nav class="navbar" role="navigation" aria-label="Navigation principale">
+    <nav class="navbar" aria-label="Navigation principale">
         <div class="logo">
             <img src="Images/logominimaliste.png" alt="Cott'Art Galerie Logo">
         </div>
