Add section headers for gallery and mission statement

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 
     <!-- Gallery Grid -->
     <section class="gallery">
+        <h2>Découvrir nos Œuvres</h2>
         <div class="gallery-grid">
             <!-- Artwork 1 -->
             <article class="artwork-card">
@@ -132,6 +133,7 @@
 
     <!-- Mission Statement -->
     <section class="mission">
+        <h2>Notre Mission</h2>
         <p>La galerie Cott'Art célèbre la création contemporaine sous toutes ses formes. Un lieu vivant où artistes et visiteurs se rencontrent, échangeant et s'inspirent.</p>
     </section>
 
