Update title in index.html for simplification

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Galerie Cott'Art - Découvrez des œuvres d'art contemporain : peintures, aquarelles et encres de Chine.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="Images/angedechu.jpg">
-    <title>Galerie Cott'Art - Œuvres d'Art Contemporain | Peinture & Aquarelle</title>
+    <title>Galerie Cott'Art</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
