--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <title>Galerie Cott'Art</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet" media="print" onload="this.media='all'; this.onload=null;">
+<noscript>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
+</noscript>
+
     <link rel="preload" href="cottart.css" as="style">
     <link rel="stylesheet" href="cottart.css">
     <link rel="icon" href="favicon.ico">
